nlamah/src/main/resources/org/nlamah/QBase/QL/test/error/doubleDeclaration.ql
form test
{
	question1 number "test1"
	question1 boolean "test2"
}